[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helpers"
dynamic = ["version"]
description = ""
readme = "README.md"
authors = [{ name = "Birgitta Andreasen", email = "birgitta@firum.fo" }]
dependencies = [
    "numpy >= 1.23",
    "xarray[complete]",
    "cmocean",
    "geopandas"
]